--- a/radioactive_elements/radioactive_elements_app/templates/services.html
+++ b/radioactive_elements/radioactive_elements_app/templates/services.html
@@ -12,7 +12,7 @@
             <div class = "circle oswaldH">{{basketCount}}</div>
         {% endif %}
         <a href="{% url 'decay' decayId %}">
-            <img src="http://127.0.0.1:9000/images/icons/quote.jpg" alt = "decay" class = "basketLogo">
+            <img src="http://127.0.0.1:9000/images/icons/quote.jpg" alt = "decay" class = "decayLogo">
         </a>
     </div>
     <div class = "elementsContainer">
